--- a/style.css
+++ b/style.css
@@ -3,3 +3,17 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.azul{
+    width: 200px;
+    height: 200px;
+    background-color: blue;
+    margin: 30px;
+}
+
+.vermelho{
+    width: 200px;
+    height: 200px;
+    background-color: red;
+    margin: 30px;
+}
